--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,10 @@ iOSInjectionProject/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,xcode,swift,cocoapods
+
+
+### Tuist ###
+graph.dot
+Derived/
+*.xcodeproj
+*.xcworkspace
